# jira-tui

./: Cargo.toml  README.md  env.example  run.sh
.github/: copilot-instructions.md
src/: config.rs  jira.rs  main.rs  ui.rs
